# commerce-cocos-sdk

./: .gitignore  .gitlab-ci.yml  CHANGELOG.zh.md  README.md  README.zh.md  package.json
assets/: CHANGELOG.en.md  CHANGELOG.zh.md  README (Demo).zh.md  README-en (Demo).md  README-zh (Demo).md
native/engine/ios/: CMakeLists.txt  XsollaNativeUtils.mm  XsollaUtils.h
native/engine/ios/Frameworks/XsollaSDKLoginKit.framework/: Info.plist
native/engine/ios/Frameworks/XsollaSDKLoginKit.framework/Frameworks/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKLoginKit.framework/Frameworks/XsollaSDKUtilities.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKLoginKit.framework/Modules/XsollaSDKLoginKit.swiftmodule/: arm64-apple-ios.swiftmodule  x86_64.swiftmodule
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-arm64/XsollaSDKLoginKit.framework/: XsollaSDKLoginKit
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-arm64/XsollaSDKLoginKit.framework/Frameworks/XsollaSDKUtilities.framework/: Info.plist  XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-arm64/XsollaSDKLoginKit.framework/Modules/XsollaSDKLoginKit.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftinterface  arm64.swiftinterface
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-arm64/XsollaSDKLoginKit.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-x86_64-simulator/XsollaSDKLoginKit.framework/: XsollaSDKLoginKit
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-x86_64-simulator/XsollaSDKLoginKit.framework/Frameworks/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-x86_64-simulator/XsollaSDKLoginKit.framework/Modules/XsollaSDKLoginKit.swiftmodule/: x86_64-apple-ios-simulator.swiftdoc  x86_64.swiftinterface
native/engine/ios/Frameworks/XsollaSDKLoginKit.xcframework/ios-x86_64-simulator/XsollaSDKLoginKit.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKLoginKitObjectiveC.xcframework/ios-arm64/XsollaSDKLoginKitObjectiveC.framework/: Info.plist
native/engine/ios/Frameworks/XsollaSDKLoginKitObjectiveC.xcframework/ios-arm64/XsollaSDKLoginKitObjectiveC.framework/Frameworks/XsollaSDKLoginKit.framework/: XsollaSDKLoginKit
native/engine/ios/Frameworks/XsollaSDKLoginKitObjectiveC.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitObjectiveC.framework/: XsollaSDKLoginKitObjectiveC
native/engine/ios/Frameworks/XsollaSDKLoginKitObjectiveC.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitObjectiveC.framework/Frameworks/XsollaSDKLoginKit.framework/: Info.plist  XsollaSDKLoginKit
native/engine/ios/Frameworks/XsollaSDKLoginKitObjectiveC.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitObjectiveC.framework/Modules/XsollaSDKLoginKitObjectiveC.swiftmodule/: x86_64.swiftdoc
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.framework/: Info.plist  XsollaSDKLoginKitUnity
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.framework/Frameworks/XsollaSDKLoginKit.framework/Frameworks/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.framework/Modules/XsollaSDKLoginKitUnity.swiftmodule/: arm64-apple-ios.swiftmodule  arm64.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftinterface
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.framework/Modules/XsollaSDKLoginKitUnity.swiftmodule/Project/: x86_64-apple-ios-simulator.swiftsourceinfo
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/: Info.plist
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-arm64/XsollaSDKLoginKitUnity.framework/: XsollaSDKLoginKitUnity
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-arm64/XsollaSDKLoginKitUnity.framework/Frameworks/XsollaSDKLoginKit.framework/: XsollaSDKLoginKit
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-arm64/XsollaSDKLoginKitUnity.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitUnity.framework/: Info.plist  XsollaSDKLoginKitUnity
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitUnity.framework/Headers/: XsollaSDKLoginKitUnity-Swift.h
native/engine/ios/Frameworks/XsollaSDKLoginKitUnity.xcframework/ios-x86_64-simulator/XsollaSDKLoginKitUnity.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKUtilities.framework/Modules/XsollaSDKUtilities.swiftmodule/: arm64-apple-ios.swiftmodule  arm64.swiftinterface  x86_64-apple-ios-simulator.swiftinterface  x86_64.swiftdoc  x86_64.swiftmodule
native/engine/ios/Frameworks/XsollaSDKUtilities.xcframework/: Info.plist
native/engine/ios/Frameworks/XsollaSDKUtilities.xcframework/ios-arm64/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKUtilities.xcframework/ios-arm64/XsollaSDKUtilities.framework/_CodeSignature/: CodeResources
native/engine/ios/Frameworks/XsollaSDKUtilities.xcframework/ios-x86_64-simulator/XsollaSDKUtilities.framework/: XsollaSDKUtilities
native/engine/ios/Frameworks/XsollaSDKUtilities.xcframework/ios-x86_64-simulator/XsollaSDKUtilities.framework/_CodeSignature/: CodeResources
(+274 files in other folders)
